syntax = "proto3";

package gameplay_service;

message ThiefFruitRequest {
    string userId = 1;
    string placedItemFruitId = 2;
}

message ThiefFruitResponse {
    int32 quantity = 1;
}